Product images arrangement

--- a/styles/product.css
+++ b/styles/product.css
@@ -1,12 +1,28 @@
-.background-img {
+.content {
+  height: 1584px;
   position: relative;
   top: 335px;
+  background-image: url("../images/product-bg-img.png");
 }
 
 .background-dim {
-  position: absolute;
-  top: 335px;
   width: 100%;
   height: 1584px;
   background-color: rgba(0, 0, 0, 0.3);
+}
+
+.content-1 {
+  position: absolute;
+  top: 44px;
+  left: 107px;
+}
+.content-2 {
+  position: absolute;
+  top: 553px;
+  left: 72px;
+}
+.content-3 {
+  position: absolute;
+  bottom: 161px;
+  left: 99px;
 }
