Connect story8 to product page

--- a/styles/shared.css
+++ b/styles/shared.css
@@ -28,6 +28,7 @@ a {
   position: absolute;
   top: 97px;
   left: 57px;
+  cursor: pointer;
 }
 
 .dim {
@@ -37,7 +38,7 @@ a {
 }
 
 .stroke {
-  border-left: 0.5px solid rgba(183, 203, 198, 0.25);
+  border-left: 1px solid rgba(183, 203, 198, 0.25);
 }
 
 .nav {
