--- a/styles/product.css
+++ b/styles/product.css
@@ -1,19 +1,26 @@
-.selected {
-  background-image: url("../images/selected-btn.png");
-  /* position: relative; */
+.selected-box {
+  position: relative;
+  top: 5px;
 }
 
 .selected::before {
   position: absolute;
   content: "";
-  display: block;
   top: 0;
   left: 540px;
-  /* width: 270px;
-  height: 102px; */
-  background-color: rgb(0, 0, 0);
+  width: 270px;
+  height: 102px;
+  background-color: rgba(0, 0, 0, 0.2);
   background-size: cover;
-  opacity: 0.9;
+  z-index: 1;
+}
+
+.selected span {
+  position: absolute;
+  top: 26px;
+  /* left: 603px; */
+  left: 603px;
+  z-index: 2;
 }
 
 .content-container {
