--- a/styles/product.css
+++ b/styles/product.css
@@ -29,6 +29,10 @@
   background-image: url("../images/product-bg-img.png");
 }
 
+.content-container img {
+  opacity: 0.95;
+}
+
 .background-dim {
   width: 100%;
   height: 1584px;
