--- a/styles/story8.css
+++ b/styles/story8.css
@@ -107,35 +107,26 @@ a {
   font-weight: 600;
   color: white;
 }
-
-@font-face {
-  font-family: "Pretendard";
-  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
-    format("woff");
-  font-weight: 400;
-  font-style: normal;
+.selected-box {
+  position: relative;
+  top: 5px;
 }
 
-@font-face {
-  font-family: "Pretendard";
-  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Medium.woff")
-    format("woff");
-  font-weight: 500;
-  font-style: medium;
+.selected::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: -3px;
+  width: 270px;
+  height: 102px;
+  background-color: rgba(0, 0, 0, 0.2);
+  background-size: cover;
+  z-index: 1;
 }
 
-@font-face {
-  font-family: "Pretendard";
-  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff")
-    format("woff");
-  font-weight: 600;
-  font-style: semibold;
-}
-
-@font-face {
-  font-family: "Pretendard";
-  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Bold.woff")
-    format("woff");
-  font-weight: 700;
-  font-style: bold;
+.selected span {
+  position: absolute;
+  top: 26px;
+  left: 84px;
+  z-index: 2;
 }
