landing, shared.css, ... changing

--- a/styles/landing.css
+++ b/styles/landing.css
@@ -1,3 +1,7 @@
+body {
+    background-color: black;
+}
+
 .landing-frame {
     position: relative;
     left: 50%;
@@ -20,7 +24,7 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.75);
+    background-color: rgba(0, 0, 0, 0.65);
 }
 
 .landing-log {
@@ -32,19 +36,31 @@
     top: 550px;
 }
 
-.color-h1-1 {
+.color-h2-1 {
     position: absolute;
     color: white;
+    font-family: "Rubik Mono One", monospace;
+    font-weight: lighter;
+    white-space: nowrap;
+    letter-spacing: -3px;
+    word-spacing: -28px;
+    font-size: 43.5pt;
 
-    left: 76px;
+    left: 40.5px;
     top: 900px;
 }
 
-.color-h1-2 {
+.color-h2-2 {
     position: absolute;
     color: #9CC2CA;
+    font-family: "Rubik Mono One", monospace;
+    font-weight: lighter;
+    white-space: nowrap;
+    letter-spacing: -1px;
+    word-spacing: -25px;
+    font-size: 43.5pt;
 
-    left: 191px;
+    left: 154.5px;
     top: 1060px;
 }
 
