--- a/styles/story7.css
+++ b/styles/story7.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+
 * {
   margin: 0;
   font-family: "Pretendard", "Spline Sans" !important;
@@ -25,13 +27,6 @@ a {
   overflow: hidden;
 }
 
-.home-btn {
-  position: absolute;
-  top: 97px;
-  left: 57px;
-  cursor: pointer;
-}
-
 .selected-box {
   position: relative;
   top: 5px;
@@ -56,20 +51,28 @@ a {
   z-index: 2;
 }
 
-.background::before {
-  content: "";
+.story_vid {
   position: absolute;
-  top: 0;
+  height: 1585px;
+  width: 1080px;
+  top: 335px;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* 어두운 오버레이 효과 */
-  z-index: 1;
+  object-fit: cover;
 }
 
-.background {
+.story-dim {
   position: absolute;
+  height: 1585px;
+  width: 1080px;
   top: 335px;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.35);
+}
+
+.home-btn {
+  position: absolute;
+  top: 97px;
+  left: 57px;
   cursor: pointer;
 }
 
@@ -87,13 +90,29 @@ a {
   left: 74px;
   cursor: pointer;
   z-index: 2;
+  opacity: 0.95;
 }
 
+.info_image_1_title {
+  position: absolute;
+  color: white;
+  font-size: 40px;
+  text-align: left;
+  top: 770px;
+  left: 85px;
+
+  z-index: 2;
+}
 .info_image_1_text {
   position: absolute;
-  top: 784px;
+  color: white;
+  font-size: 30px;
+  font-weight: lighter;
+  text-align: left;
+  top: 840px;
   left: 85px;
-  cursor: pointer;
+  line-height: 1.6em;
+
   z-index: 2;
 }
 
@@ -103,14 +122,29 @@ a {
   left: 316px;
   cursor: pointer;
   z-index: 2;
+  opacity: 0.95;
 }
 
+.info_image_2_title {
+  position: absolute;
+  color: white;
+  font-size: 40px;
+  text-align: right;
+  top: 1550px;
+  left: 575px;
+
+  z-index: 2;
+}
 .info_image_2_text {
   position: absolute;
-  top: 1566px;
+  color: white;
+  font-size: 30px;
+  font-weight: lighter;
+  text-align: right;
+  top: 1635px;
   left: 472px;
-  cursor: pointer;
   z-index: 2;
+  line-height: 1.6em;
 }
 
 .dim {
@@ -138,36 +172,4 @@ a {
   font-size: 40px;
   font-weight: 600;
   color: white;
-}
-
-@font-face {
-  font-family: "Pretendard";
-  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
-    format("woff");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Pretendard";
-  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Medium.woff")
-    format("woff");
-  font-weight: 500;
-  font-style: medium;
-}
-
-@font-face {
-  font-family: "Pretendard";
-  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff")
-    format("woff");
-  font-weight: 600;
-  font-style: semibold;
-}
-
-@font-face {
-  font-family: "Pretendard";
-  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Bold.woff")
-    format("woff");
-  font-weight: 700;
-  font-style: bold;
 }
