--- a/styles/story8.css
+++ b/styles/story8.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+
 * {
   margin: 0;
   font-family: "Pretendard", "Spline Sans" !important;
@@ -32,53 +34,108 @@ a {
   cursor: pointer;
 }
 
-.background::before {
-  content: "";
+.selected-box {
+  position: relative;
+  top: 5px;
+}
+
+.selected::before {
   position: absolute;
+  content: "";
   top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* 어두운 오버레이 효과 */
+  left: -3px;
+  width: 270px;
+  height: 102px;
+  background-color: rgba(0, 0, 0, 0.2);
+  background-size: cover;
   z-index: 1;
 }
 
-.background {
+.selected span {
   position: absolute;
+  top: 26px;
+  left: 84px;
+  z-index: 2;
+}
+
+.story_vid {
+  position: absolute;
+  height: 1585px;
+  width: 1080px;
   top: 335px;
-  cursor: pointer;
+  left: 0;
+  object-fit: cover;
+}
+
+.story-dim {
+  position: absolute;
+  height: 1585px;
+  width: 1080px;
+  top: 335px;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.35);
 }
 
 .info_image_1 {
   position: absolute;
-  top: 393px;
+  top: 403px;
   left: 74px;
   cursor: pointer;
+  z-index: 2;
+  opacity: 0.95;
+}
+
+.info_image_1_title {
+  position: absolute;
+  color: white;
+  font-size: 40px;
+  text-align: left;
+  top: 760px;
+  left: 80px;
   z-index: 2;
 }
 
 .info_image_1_text {
   position: absolute;
-  top: 784px;
-  left: 85px;
-  cursor: pointer;
+  color: white;
+  font-size: 30px;
+  font-weight: lighter;
+  text-align: left;
+  top: 830px;
+  left: 80px;
   z-index: 2;
+  line-height: 1.6em;
 }
 
 .info_image_2 {
   position: absolute;
-  top: 1171px;
+  top: 1151px;
   left: 319px;
   cursor: pointer;
   z-index: 2;
+  opacity: 0.95;
 }
 
+.info_image_2_title {
+  position: absolute;
+  color: white;
+  font-size: 40px;
+  text-align: right;
+  top: 1530px;
+  left: 520px;
+
+  z-index: 2;
+}
 .info_image_2_text {
   position: absolute;
-  top: 1556px;
-  left: 257px;
-  cursor: pointer;
+  color: white;
+  font-size: 30px;
+  font-weight: lighter;
+  text-align: right;
+  top: 1615px;
+  left: 290px;
   z-index: 2;
+  line-height: 1.6em;
 }
 
 .dim {
@@ -106,27 +163,4 @@ a {
   font-size: 40px;
   font-weight: 600;
   color: white;
-}
-.selected-box {
-  position: relative;
-  top: 5px;
-}
-
-.selected::before {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: -3px;
-  width: 270px;
-  height: 102px;
-  background-color: rgba(0, 0, 0, 0.2);
-  background-size: cover;
-  z-index: 1;
-}
-
-.selected span {
-  position: absolute;
-  top: 26px;
-  left: 84px;
-  z-index: 2;
 }
